--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ nav {
 
 .arrow {
     position: absolute;
-    top: 80vh;
+    top: 65vh;
     left: 65%;
     
 }
@@ -176,14 +176,43 @@ nav {
 #arrowMain {
     position: absolute;
     left: 65%;
-
+    animation: bounceArrow 3s infinite;
 }
+@keyframes bounceArrow {
+    from {
+        transform: translate3d(0px, 0px, 0px);
+    }
+    50% {
+        transform: translate3d(0px, 60px, 0px);
+    }
+    75% {
+        transform: translate3d(0px, 60px, 0px);
+    }
+    to {
+        transform: translate3d(0px, 0px, 0px);
+    }
+  }
 
 #afterImage {
     position: absolute;
     left: 65%;
+    animation: bounceAfterimage 3s infinite;
 }
 
+@keyframes bounceAfterimage {
+    from {
+        transform: translate3d(0px, 0px, 0px);
+    }
+    50% {
+        transform: translate3d(0px, 0px, 0px);
+    }
+    75% {
+        transform: translate3d(0px, 60px, 0px);
+    }
+    to {
+        transform: translate3d(0px, 0px, 0px);
+    }
+  }
 
 /*About CSS* /
 .about{
@@ -312,6 +341,7 @@ h1 {
     width: 300px;
     height: 40vh;
     padding: 5%;
+    padding-top: 30px;
     gap: 4px;
     border-radius: 20px;
     border: 1px solid #FF981E;
@@ -357,7 +387,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 10vw 0 10vw;
+    /* margin: 0 10vw 0 10vw; */
     width: 100vw;
 }
 
@@ -464,7 +494,36 @@ h3 {
     font-size: 32px;
 }
 
+footer {
+    background: linear-gradient(180deg, rgba(178, 166, 153, 0.20) 0%, rgba(178, 166, 153, 0.00) 100%), linear-gradient(180deg, #121212 17.50%, #39342E 55.52%, #121212 94.35%);
+    box-shadow: 0px -4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    height: 20vh;
+}
+
+/* .Contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+} */
+
+.email {
+    display: flex;
+    flex-direction: row;
+}
+
+.emailIcon, .instagram, .linkedin{
+    width: 40px;
+}
+
 @media only screen and (min-width: 0px) {
+    .clusterimg {
+        display: none;
+    }
     .options ul {
         display: none;
     }
@@ -477,6 +536,9 @@ h3 {
 }
 
 @media only screen and (min-width: 700px) {
+    .clusterimg {
+
+    }
     .options ul {
         display: inline-block;
     }
